--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:dev": "cross-env NODE_ENV=production BASE_ENV=development webpack -c build/webpack.prod.js",
     "build:test": "cross-env NODE_ENV=production BASE_ENV=test webpack -c build/webpack.prod.js",
     "build:pre": "cross-env NODE_ENV=production BASE_ENV=pre webpack -c build/webpack.prod.js",
-    "build:prod": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.prod.js"
+    "build:prod": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.prod.js",
+    "build:analy": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.analy.js"
   },
   "keywords": [],
   "author": "",
@@ -20,22 +21,35 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-typescript": "^7.22.5",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.1",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
+    "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.35.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "glob-all": "^3.3.1",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "node-notifier": "^10.0.1",
+    "portfinder": "^1.0.32",
     "postcss-loader": "^7.3.4",
+    "purgecss-webpack-plugin": "^5.0.0",
     "sass": "^1.69.7",
     "sass-loader": "^13.3.3",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.10",
+    "thread-loader": "^4.0.2",
     "vue-loader": "^17.2.2",
     "webpack": "^5.85.1",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.3",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^5.10.0",
+    "webpackbar": "^6.0.0"
   },
   "dependencies": {
     "vue": "^3.3.4"
