--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.7.6",
     "node-notifier": "^10.0.1",
+    "node-sass": "^9.0.0",
     "portfinder": "^1.0.32",
     "postcss-loader": "^7.3.4",
     "purgecss-webpack-plugin": "^5.0.0",
@@ -43,6 +44,8 @@
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.10",
     "thread-loader": "^4.0.2",
+    "unplugin-auto-import": "^0.17.3",
+    "unplugin-vue-components": "^0.26.0",
     "vue-loader": "^17.2.2",
     "webpack": "^5.85.1",
     "webpack-bundle-analyzer": "^4.10.1",
@@ -52,6 +55,11 @@
     "webpackbar": "^6.0.0"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "axios": "^1.6.5",
+    "element-plus": "^2.4.4",
+    "ol": "^6.15.1",
+    "vue": "^3.3.4",
+    "vue-demi": "^0.14.6",
+    "vue-router": "^4.2.5"
   }
 }
